# preql

./: CMakeLists.txt  README.md
include/buffer/: buffer_manager.h
include/core/: database.h
include/sql/: parser.h
include/ui/: cli.h
src/: main.cpp
src/buffer/: buffer_manager.cpp
src/core/: database.cpp
src/sql/: parser.cpp
src/ui/: cli.cpp
tests/: CMakeLists.txt  buffer_test.cpp  cli_test.cpp  database_test.cpp  parser_test.cpp
